# SiteBot

./: .env.example  .gitattributes  .gitignore  Caddyfile  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
docs/: CLIENT_HANDOUT.html  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  FEATURE_PARITY.md  GCP_DEPLOYMENT.md  GO_LIVE.md  GTM_MONETIZATION.md  MARKET_DEMAND.md  OPERATIONS.md  PRICING.md  ROADMAP.md  SECURITY_AUDIT.md
evals/: aiing.json  aurora-smoke.json  ci-fixture.json  example_evals.json  run_evals.py  summit-auto.json
scripts/: ci_eval_fixture.py  encrypt_existing_secrets.py  loadtest.py
scripts/deploy/: README.md  provision-aws.sh  provision-azure.sh  provision-gcp.sh  provision-oracle.sh  setup-server.sh
sql/: schema.sql
sql/migrations/: 002_phase1_hardening.sql  003_phase2_product.sql  004_phase3_platform.sql  005_feature_parity.sql  006_batch_b.sql  007_batch_c.sql  008_secrets_guardian.sql  009_roadmap_channels.sql  010_per_site_llm_key.sql  011_multi_seed.sql  012_semantic_cache.sql  013_users_render.sql  014_crm_sales_voice.sql  015_auto_branding.sql  016_feature_entitlements.sql  017_payments_ledger.sql  018_retrieval_modes.sql  019_graph_retrieval.sql
src/sitebot/: __init__.py  actions.py  analytics.py  app.py  auth.py  billing.py  branding.py  channels.py  cli.py  config.py  crawler.py  crm.py  crypto.py  db.py  email_out.py  embeddings.py  evals.py  features.py  graph.py  guard.py  ingest.py  llm.py  logging_setup.py  metrics.py  payments.py  rag.py  ratelimit.py  rerank.py  sources.py  store.py  webhooks.py  worker.py
src/sitebot/static/: dashboard.html  onboarding.html
tests/: test_core.py  test_crypto.py  test_features.py  test_integration.py
widget/: demo.html  widget.js
